Atualizado cor de verba e saldo total

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		h1, h3 {
             color: rgba(239, 113, 205, 0.5);
         }
+		
+		h4 {
+            color: white;
+        }
 
         td, th {
             text-align: right;
@@ -58,8 +62,8 @@
     <br><br>
     <!-- Adicione os campos para receber os totais de verba e saldo do mês -->
     <div>
-        <h3>Verba Total do Mês: <span id="tbxVerbaTotalMes"></span></h3>
-        <h3>Saldo Total do Mês: <span id="tbxSaldoTotalMes"></span></h3>
+        <h4>Verba Total do Mês: <span id="tbxVerbaTotalMes" style="color: rgba(239, 113, 205, 0.5); font-size: 20px;"></span></h4>
+        <h4>Saldo Total do Mês: <span id="tbxSaldoTotalMes" style="color: rgba(239, 113, 205, 0.5); font-size: 20px;"></span></h4>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js"></script>
