--- a/index.html
+++ b/index.html
@@ -65,6 +65,44 @@
         <h4>Verba Total do Mês: <span id="tbxVerbaTotalMes" style="color: rgba(239, 113, 205, 0.5); font-size: 20px;"></span></h4>
         <h4>Saldo Total do Mês: <span id="tbxSaldoTotalMes" style="color: rgba(239, 113, 205, 0.5); font-size: 20px;"></span></h4>
     </div>
+	<br><br>
+	
+	<!-- Adicione este formulário após a tabela de categorias -->
+	<div>
+		<h3>Inserir Nova Saída</h3>
+		<form id="formNovaSaida">
+			<label for="descricao">Descrição:</label>
+			<input type="text" id="descricao" name="descricao" required><br><br>
+
+			<label for="valor">Valor:</label>
+			<input type="number" id="valor" name="valor" required><br><br>
+
+			<label for="data">Data de Lançamento:</label>
+			<input type="date" id="data" name="data" required><br><br>
+
+			<label for="categoria">Categoria:</label>
+			<select id="categoria" name="categoria">
+				<!-- Opções de categoria serão preenchidas dinamicamente pelo JavaScript -->
+			</select><br><br>
+
+			<label for="conta">Conta:</label>
+			<select id="conta" name="conta">
+				<!-- Opções de conta serão preenchidas dinamicamente pelo JavaScript -->
+			</select><br><br>
+
+			<label for="mesReferencia">Mês de Referência:</label>
+			<input type="month" id="mesReferencia" name="mesReferencia" required><br><br>
+
+			<label for="tipoSaida">Tipo de Saída:</label>
+			<select id="tipoSaida" name="tipoSaida">
+				<option value="credito">Crédito</option>
+				<option value="dinheiro">Dinheiro</option>
+			</select><br><br>
+
+			<button type="button" onclick="inserirSaida()">Inserir Saída</button>
+		</form>
+	</div>
+
 
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-database-compat.js"></script>
