Alteração de botão e layout.
Alteração do nome do botão de meses futuro para projeção fin.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="carousel-item" style="background-color: #caffbf;">
                 <div class="button"></div>
-                <p>Meses Futuros</p>
+                <p>Projeção fin.</p>
             </div>
             <div class="carousel-item" style="background-color: #ffadad;">
                 <div class="button"></div>
