--- a/contas.html
+++ b/contas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contas</title>
+	<link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +24,7 @@
             </div>
             <div class="carousel-item" style="background-color: #caffbf;">
                 <div class="button"></div>
-                <p>Meses Futuros</p>
+                <p>Projeção fin.</p>
             </div>
             <div class="carousel-item" style="background-color: #ffadad;">
                 <div class="button"></div>
