--- a/contas.html
+++ b/contas.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contas</title>
-	<link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
-	
-	<!-- Adicionando scripts do Firebase -->
+
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Adicionando Chart.js -->
 </head>
 <body>
     <div class="carousel-container">
         <div class="carousel">
-		    <div class="carousel-item" onclick="location.href='index.html'" style="background-color: #B1EBE4;">
+            <div class="carousel-item" onclick="location.href='index.html'" style="background-color: #B1EBE4;">
                 <div class="button"></div>
                 <p>Registrar</p>
             </div>
@@ -36,13 +36,17 @@
             </div>
         </div>
     </div>
-	
-	<!-- Lista de contas -->
-	<div class="transaction-list">
-		<div class="lista" id="accountsList">
-			<ol id="accounts"></ol>
-		</div>
+
+    <div class="transaction-list">
+        <div class="lista" id="accountsList">
+            <ol id="accounts"></ol>
+        </div>
     </div>
+
+    <div id="accountDetails" class="detailsDiv">
+		<input type="month" id="monthPicker">
+		<canvas id="detailsChart"></canvas> <!-- Gráfico de Pizza -->
+	</div>     
 
     <script src="scriptContas.js"></script>
 </body>
