--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Registrar</title>
 	<link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
+	
 	<!-- Adicionando scripts do Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
@@ -21,7 +22,7 @@
                 <div class="button"></div>
                 <p>Contas</p>
             </div>
-            <div class="carousel-item" style="background-color: #ffd6a5;">
+            <div class="carousel-item" onclick="location.href='categorias.html'" style="background-color: #ffd6a5;">
                 <div class="button"></div>
                 <p>Categorias</p>
             </div>
@@ -112,6 +113,7 @@
         </div>
     </form>
 
+    <script src="scriptGeral.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
