--- a/categorias.html
+++ b/categorias.html
@@ -34,12 +34,14 @@
     </div>
 
     <div class="transaction-list">
-		<input type="month" id="monthPicker">
+        <input type="month" id="monthPicker">
         <ul class="item-list" id="categories"></ul>
-    </div>    
+    </div>	
+	
+	<select id="saidasSelect"></select>
 
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+    <script src="firebase-app.js"></script>
+    <script src="firebase-database.js"></script>
     <script src="scriptGeral.js"></script>
     <script src="scriptCategorias.js"></script>
 </body>
