adicionado titulos saidas
Adicionado titulo de saídas e melhoria no layout.

--- a/categorias.html
+++ b/categorias.html
@@ -38,7 +38,10 @@
         <ul class="item-list" id="categories"></ul>
     </div>	
 	
-	<select id="saidasSelect"></select>
+	<div class="transaction-form">
+		<label id="labelCategoriaSelecionada"></label>
+		<select id="saidasSelect"></select>
+	</div>
 
     <script src="firebase-app.js"></script>
     <script src="firebase-database.js"></script>
