--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <div class="button"></div>
                 <p>Projeção fin.</p>
             </div>
+			<div class="carousel-item" onclick="location.href='relatorios.html'" style="background-color: #9ad0f5;">
+                <div class="button"></div>
+                <p>Relatórios</p>
+            </div>
             <div class="carousel-item" style="background-color: #ffadad;">
                 <div class="button"></div>
                 <p>Configurações</p>
