--- a/relatorios.html
+++ b/relatorios.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Categorias</title>
+    <title>Relatórios</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css?v=1.1">
+    <style>
+        .container {
+            width: 80%;
+            margin: auto;
+            text-align: center;
+        }
+
+        canvas {
+            max-width: 100%;
+        }
+    </style>
 </head>
 <body>
     <div class="carousel-container">
@@ -18,7 +29,7 @@
                 <div class="button"></div>
                 <p>Contas</p>
             </div>
-            <div class="carousel-item" style="background-color: #ffd6a5;">
+            <div class="carousel-item" onclick="location.href='categorias.html'" style="background-color: #ffd6a5;">
                 <div class="button"></div>
                 <p>Categorias</p>
             </div>
@@ -26,30 +37,27 @@
                 <div class="button"></div>
                 <p>Projeção fin.</p>
             </div>
-			<div class="carousel-item" onclick="location.href='relatorios.html'" style="background-color: #9ad0f5;">
+			<div class="carousel-item" style="background-color: #9ad0f5;">
                 <div class="button"></div>
                 <p>Relatórios</p>
             </div>
             <div class="carousel-item" style="background-color: #ffadad;">
                 <div class="button"></div>
                 <p>Configurações</p>
-            </div>
+            </div>            
         </div>
     </div>
 
-    <div class="transaction-list">
-        <input type="month" id="monthPicker">
-        <ul class="item-list" id="categories"></ul>
-    </div>	
-	
-	<div class="transaction-form">
-		<label id="labelCategoriaSelecionada"></label>
-		<select id="saidasSelect"></select>
-	</div>
+    <div class="container">
+        <h2>Relatório de Saídas dos Últimos 12 Meses</h2>
+        <canvas id="myChart"></canvas>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script src="firebase-app.js"></script>
     <script src="firebase-database.js"></script>
     <script src="scriptGeral.js"></script>
-    <script src="scriptCategorias.js"></script>
+    <script src="scriptRelatorios.js"></script>
 </body>
 </html>
