Alteração layout da página de relatórios

--- a/relatorios.html
+++ b/relatorios.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="container">
-        <h2>Relatório de Saídas dos Últimos 12 Meses</h2>
+        <h2 style="color: #9ad0f5">Saídas</h2>
         <canvas id="myChart"></canvas>
     </div>
 
