Adicionado novo gráfico por categorias.

--- a/relatorios.html
+++ b/relatorios.html
@@ -52,9 +52,16 @@
         <h2 style="color: #9ad0f5">Saídas</h2>
         <canvas id="myChart"></canvas>
     </div>
+	
+	<div class="container">
+        <h2 style="color: #9ad0f5">Saídas por categoria</h2>
+		<select id="categorySelect" name="categorySelect">
+			<!-- Opções serão preenchidas futuramente -->
+		</select>
+        <canvas id="myChartCategory"></canvas>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
     <script src="firebase-app.js"></script>
     <script src="firebase-database.js"></script>
     <script src="scriptGeral.js"></script>
