Ajuste layout da tela de registro

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 	<!-- Adicionando scripts do Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+	
+	<style>
+        label, select{
+			font-size: 12px;
+		}
+		
+		input[type="text"],
+		input[type="date"],
+		input[type="number"],
+		input[type="month"],
+		select {
+			font-size: 12px;
+		}
+    </style>
 </head>
 <body>
     <div class="carousel-container">
