--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="button"></div>
                 <p>Categorias</p>
             </div>
-            <div class="carousel-item" style="background-color: #caffbf;">
+            <div class="carousel-item" onclick="location.href='projecaoFinanceira.html'" style="background-color: #caffbf;">
                 <div class="button"></div>
                 <p>Projeção fin.</p>
             </div>
