Adicionado novos gráficos
Adicionado gráfico de entradas, saldo por mês e saldo acumulado.

--- a/relatorios.html
+++ b/relatorios.html
@@ -61,6 +61,21 @@
 		</select>
         <canvas id="myChartCategory"></canvas>
     </div>
+	
+	<div class="container">
+		<h2 style="color: #9ad0f5">Entradas</h2>
+		<canvas id="myChartEntradas"></canvas>
+	</div>
+
+	<div class="container">
+        <h2 style="color: #9ad0f5">Saldo do mês</h2>
+        <canvas id="myChartSaldo"></canvas>
+    </div>
+	
+	<div class="container">
+        <h2 style="color: #9ad0f5">Saldo geral</h2>
+        <canvas id="myChartSaldoAcumulado"></canvas>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="firebase-app.js"></script>
