Adicionado a chamada da nova tela de metas nas outras páginas.
Adicionado a chamada da nova tela de metas nas outras páginas.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <div class="button"></div>
                 <p>Registrar</p>
             </div>
+            <div class="carousel-item" onclick="location.href='metaCarro.html'" style="background-color: #e6b3ff;">
+                <div class="button"></div>
+                <p>Meta</p>
+            </div>
             <div class="carousel-item" onclick="location.href='contas.html'" style="background-color: #fdffb6;">
                 <div class="button"></div>
                 <p>Contas</p>
