Incluído destaque no valor da meta.
Incluído destaque no valor da meta.

--- a/metaCarro.html
+++ b/metaCarro.html
@@ -15,7 +15,7 @@
     <div class="meta-container">
         <div class="progresso-box">
             <div class="progresso-info">
-                Faltam: R$ <span id="valorAtual">0,00</span>
+                <strong><span id="valorAtual" class="valor-destaque">R$ 0,00</span></strong>
             </div>
             <div class="progresso-barra">
                 <div class="progresso-barra-preenchida" id="barraProgresso"></div>
