Animação de carro
Adicionado animação de carro se movendo em direção objetivo

--- a/metaCarro.html
+++ b/metaCarro.html
@@ -24,6 +24,10 @@
         <div class="mensagem-animada" id="mensagemAnimada">
             💪 Continue assim! Falta pouco!
         </div>
+        <div class="pista-container">
+            <img src="img/pista.png" class="pista-fundo">
+            <img src="img/honda.png" class="carro-imagem" id="carroImagem">
+        </div>
     </div>
 
     <script src="scriptGeral.js"></script>
