Criado pagina de projeção.
Criado a pagina de projeção para visualizar o quanto pode gastar por categoria para não ficar devendo.

--- a/contas.html
+++ b/contas.html
@@ -30,10 +30,7 @@
                 <div class="button"></div>
                 <p>Categorias</p>
             </div>
-            <div class="carousel-item" style="background-color: #caffbf;">
-                <div class="button"></div>
-                <p>Projeção fin.</p>
-            </div>
+            <div class="carousel-item" onclick="location.href='projecao.html'" style="background-color: #caffbf;"><div class="button"></div><p>Projeção fin.</p></div>
 			<div class="carousel-item" onclick="location.href='relatorios.html'" style="background-color: #9ad0f5;">
                 <div class="button"></div>
                 <p>Relatórios</p>
