--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
                 <div class="button"></div>
                 <p>Categorias</p>
             </div>
-            <div class="carousel-item" onclick="location.href='projecaoFinanceira.html'" style="background-color: #caffbf;">
-                <div class="button"></div>
-                <p>Projeção fin.</p>
-            </div>
+            <div class="carousel-item" onclick="location.href='projecao.html'" style="background-color: #caffbf;"><div class="button"></div><p>Projeção fin.</p></div>
 			<div class="carousel-item" onclick="location.href='relatorios.html'" style="background-color: #9ad0f5;">
                 <div class="button"></div>
                 <p>Relatórios</p>
