Correção do css
Correção do css

--- a/projecao.html
+++ b/projecao.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="transaction-list">
-        <ul class="item-list" id="projecaoList"></ul>
+        <ul class="item-list-projecao" id="projecaoList"></ul>
     </div>
 
     <script src="firebase-app.js"></script>
