Migrado código de projeção para scriptGeral
Ajuste para não precisar carregar a tela de projeção antes da tela de meses futuros. Migrado código de projeção para scriptGeral. Ajuste do layout para carregar poupança atual.

--- a/contas.html
+++ b/contas.html
@@ -14,31 +14,13 @@
 <body>
     <div class="carousel-container">
         <div class="carousel">
-            <div class="carousel-item" onclick="location.href='index.html'" style="background-color: #B1EBE4;">
-                <div class="button"></div>
-                <p>Registrar</p>
-            </div>
-            <div class="carousel-item" onclick="location.href='metaCarro.html'" style="background-color: #e6b3ff;">
-                <div class="button"></div>
-                <p>Meta</p>
-            </div>
-            <div class="carousel-item" onclick="showAccounts()" style="background-color: #fdffb6;">
-                <div class="button"></div>
-                <p>Contas</p>
-            </div>
-            <div class="carousel-item" onclick="location.href='categorias.html'" style="background-color: #ffd6a5;">
-                <div class="button"></div>
-                <p>Categorias</p>
-            </div>
-            <div class="carousel-item" onclick="location.href='projecao.html'" style="background-color: #caffbf;"><div class="button"></div><p>Projeção fin.</p></div>
-			<div class="carousel-item" onclick="location.href='relatorios.html'" style="background-color: #9ad0f5;">
-                <div class="button"></div>
-                <p>Relatórios</p>
-            </div>
-            <div class="carousel-item" style="background-color: #ffadad;">
-                <div class="button"></div>
-                <p>Configurações</p>
-            </div>
+            <div class="carousel-item" onclick="location.href='index.html'" style="background-color: #B1EBE4;"><div class="button"></div><p>Registrar</p></div>            
+            <div class="carousel-item" onclick="location.href='contas.html'" style="background-color: #fdffb6;"><div class="button"></div><p>Contas</p></div>
+            <div class="carousel-item" onclick="location.href='categorias.html'" style="background-color: #ffd6a5;"><div class="button"></div><p>Categorias</p></div>
+			<div class="carousel-item" onclick="location.href='mesesFuturo.html'" style="background-color: #ffb3b3;"><div class="button"></div><p>Meses Fut.</p></div>
+            <div class="carousel-item" onclick="location.href='projecao.html'" style="background-color: #caffbf;"><div class="button"></div><p>Projeção fin.</p></div>			
+            <div class="carousel-item" onclick="location.href='relatorios.html'" style="background-color: #9ad0f5;"><div class="button"></div><p>Relatórios</p></div> 
+			<div class="carousel-item" onclick="location.href='metaCarro.html'" style="background-color: #e6b3ff;"><div class="button"></div><p>Meta</p></div>			
         </div>
     </div>
 
